# goerli-airdrop

./: .gitignore  Cargo.toml  README.md
bindings/: Cargo.toml
bindings/src/: console.rs  console_2.rs  distributor.rs  lib.rs  std_json.rs  vm.rs
contracts/: .env  foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/script/: Distributor.s.sol
distributor/: foundry.toml
distributor/src/: Distributor.sol
fetcher/: Cargo.toml
fetcher/src/: fetch_creators.rs  filter_creators.rs
src/: fetch_creators.rs  fetcher.rs  filter_creators.rs  lib.rs  main.rs  opt.rs
tools/: Cargo.toml  block_num.txt
tools/src/: distributor.rs  fetch_creators.rs  filter_creators.rs  filter_creators_by_balance.rs  lib.rs  opt.rs  util.rs
